--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,17 @@ cloudinary==1.29.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.14
+django-allauth==0.51.0
+django-booking==0.7.2
+django-countries==7.3.2
+django-hvad==1.8.0
+django-libs==2.0.3
 django-summernote==0.8.20.0
 gunicorn==20.1.0
+oauthlib==3.2.0
 psycopg2==2.9.3
+PyJWT==2.4.0
+python3-openid==3.2.0
 pytz==2022.1
+requests-oauthlib==1.3.1
 sqlparse==0.4.2
