--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.5.2
 cloudinary==1.29.0
+coverage==6.4.3
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.14
 django-allauth==0.51.0
 django-booking==0.7.2
 django-countries==7.3.2
+django-crispy-forms==1.14.0
 django-hvad==1.8.0
 django-libs==2.0.3
 django-summernote==0.8.20.0
